<resources>
    <string name="app_name">AMS Teacher</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dr. Parry</string>
    <string name="nav_header_subtitle">teacher@ucsm.edu.mm</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Change Password</string>

    <string name="menu_home">Home</string>
    <string name="menu_check_in">Check In</string>
    <string name="menu_settings">Change Password</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Log out</string>

    <string name="menu_my_acc_edit">Edi</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Change Password</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="change_password_key">change_password_key</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_map_my_own_api">Add Your Map API Here</string>

    <string name="teacherPref">Teacher Preference</string>
    <string name="prefid">id</string>
    <string name="prefname">name</string>
    <string name="prefpassword">password</string>
    <string name="prefphone">phone</string>
    <string name="prefemail">email</string>
    <string name="prefaddress">address</string>
    <string name="prefurl">profileurl</string>
    <string name="prefisdean">isDean</string>
    <string name="prefLat">Location Lat</string>
    <string name="prefLon">Location Lon</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="action2_change_password">Change Password</string>
    <string name="action2_account">Account</string>
    <string name="action2_about">About</string>

    <string name="menu_dean_add_student_Add">Add</string>

    <string name="menu2_dashboard">Dashboard</string>
    <string name="menu2_record">Attendance Records</string>
    <string name="menu2_view_student">View Students</string>
    <string name="menu2_medical_leave">Medical Leave</string>
    <string name="menu2_collect_attendance">Collect Attendance</string>
    <string name="menu2_add_class">Add Class</string>
    <string name="menu2_add_student">Add Student</string>
    <string name="menu2_add_teacher">Add Teacher</string>
    <string name="menu2_add_subject">Add Subject</string>
    <string name="menu2_export_csv">Export CSV</string>
    <string name="menu2_about">About</string>
    <string name="menu2_change_password">Change Password</string>
    <string name="menu2_log_out">Logout</string>

    <array name="day_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </array>

    <array name="time_of_day">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
        <item>"9"</item>
        <item>"10"</item>
        <item>"11"</item>
        <item>"12"</item>
        <item>"13"</item>
        <item>"14"</item>
        <item>"15"</item>
        <item>"16"</item>
        <item>"17"</item>
        <item>"18"</item>
        <item>"19"</item>
        <item>"20"</item>
        <item>"21"</item>
        <item>"22"</item>
        <item>"23"</item>
        <item>"24"</item>

    </array>

</resources>
