<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_dashboard"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_check_in"
                android:icon="@drawable/ic_my_location"
                android:title="@string/menu_check_in"/>

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_info"
                    android:title="@string/menu_about"/>
            <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_settings"/>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_exit"
                    android:title="@string/menu_logout"
            />

        </menu>
    </item>

</menu>
